--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,9 +27,13 @@
         <item>11월</item>
         <item>12월</item>
     </string-array>
-    <string name="action_settings">Settings</string>
-    <string name="whats_in_your_mind">Whats in your mind</string>
-    <string name="share_note">Share Note</string>
-    <string name="delete_notes">Delete Notes</string>
-    <string name="no_notes">No Notes !</string>
+    <string name="title_activity_search">search_activity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
